# tmxbin

./: .gitignore  CMakeLists.txt  README.md
data/: samplemap.tmx  tileset.tsx
script/: convertall.sh
src/common/: enums.h  xmlutil.h
src/test/: loader.cpp
src/tmx2tmb/: main.cpp
src/tmxbin/: allocator.cpp  allocator.h  filestream.cpp  filestream.h  inputstream.cpp  inputstream.h  map.cpp  map.h  orientation.h  renderorder.h  tileset.cpp  tileset.h  tilesetmanager.cpp  tilesetmanager.h  tmxbin.h  tmxbinloader.cpp  tmxbinloader.h
src/tsx2tsb/: main.cpp
src/util/: fileutil.cpp  fileutil.h  xmlutil.cpp  xmlutil.h
testdata/: complexmap.tmb  samplemap.tmb  simplemap.tmb  simplemap.tmx  tileset.tsb
